- Bulletins HTML: Possibilité d'afficher une ligne des moyennes générales annuelles.
- Possibilité, lors de la saisie des appréciations, d'afficher les moyennes et 
  appréciations des bulletins des années précédentes.

Actions:
- Ajout d'un module Actions pour gérer des inscriptions/présence élèves,
  par exemple sur les sorties/actions UNSS.

- Général:
- Possibilité de mettre à jour globalement les groupes d'après l'export EXP_ELEVES.xml
- Prise en compte du champ PAIE_FRAIS_SCOLAIRES de Siècle pour déterminer 
  le responsable légal 1 par rapport au responsable légal 2.

Gepi-1.7.3 (04/04/2018)
===========================

Carnets de notes:
- Possibilité de faire apparaitre une moyenne générale sur les relevés de notes 
  (malgré toutes les réserves sur la représentativité de cette moyenne).
- Prise en compte de la date d'entrée dans l'établissement pour ne pas proposer 
  la saisie de note si le devoir est antérieur à l'entrée de l'élève.
- Possibilité de limiter la taille du logo établissement sur le relevé de notes HTML.

Bulletins:
- Possibilité de limiter la taille du logo établissement sur le bulletin HTML.

Discipline:
- Possibilité de définir des utilisateurs spécifiques individuels comme destinataires 
  des alertes sur les incidents disciplinaires 
  (par exemple les comptes Assistante sociale, Infirmière,...).

Trombinoscopes:
- Encodage par défaut des photos avec extension de la chaine aléatoire.

Examens blancs:
- Possibilité d'insérer le fichier signature comme dans les bulletins.

LSUN:
- Possibilité d'exporter au format 2017 comme au format (LSU 18.2.0.0) qui doit
  être déployé à compter du 27/04/2018.
  Cela comprend le dispositif devoirs-faits et les langue_vivante_regionale.

Général:
- Prise en compte des modifications Siècle (30/03/18) pour les NIVEAU_RESPONSABILITE 
  et CODE_PARENTE des responsables (avec suppression des responsables légaux 1 
  et 2 dans Siècle).